2007-03-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* tc_itunes.rb:
	Updated test case to use #every.

2007-03-26  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb,
	  tests/tc_ical.rb,
	  tests/tc_textedit.rb:
	- Re-implemented the way to get all attributes of an object specifier list 
	  object, now using #every(:attribute_name) instead of #attribute_name ;
	- Updated test cases.

2007-03-25  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Do not fail if a description attribute has an empty value ;
	- Do not fail if a class inherits from a class that hasn't been defined yet.

	* tests/tc_ical.rb:
	Added test case.

2007-03-21  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb:
	- Allow multiple enum values to be passed into the same argument, packing
	  then in an array ;
	- Merge a custom method to every application class, `activate', that sends
	  the 'misc/actv' event.

	* tests/tc_textedit.rb:
	Added test cases.

2007-03-18  Laurent Sansonetti  <lsansonetti@apple.com>

	* tests/tc_itunes.rb,
	  tests/tc_textedit.rb,
	  src/lib/rbosa.rb:
	- Fixed 'msng' type conversions ;
	- Added the possibility to retrieve a list of attributes of a descriptor
	  list ;
	- Added Ruby <-> OSA conversions for color type ;
	- Added test cases. 

2007-03-08  Laurent Sansonetti  <lsansonetti@apple.com>

	* bin/rdoc-osa:
	Fixed the rdoc-osa tool for applications that do not have a 'name' command.

2007-03-02  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec:
	Forgot to include 'data/rubyosa/...', released a 0.3.0.1 version of the gem.

=== RubyOSA 0.3.0 ===

2007-03-02  Laurent Sansonetti  <lsansonetti@apple.com>

	* rubyosa.gemspec,
	  NEWS,
	  README:
	Final sync for 0.3.0.

	* src/lib/rbosa.rb:
	Convert the 'doub' OSA type as double.

2007-03-01  Laurent Sansonetti  <lsansonetti@apple.com>

	* NEWS,
	  rubyosa.gemspec:
	Prepared for 0.3.0.

	* extconf.rb,
	  post-install.rb,
	  README: