@@ -1,3 +1,12 @@
+2007-03-28  Laurent Sansonetti  <lsansonetti@apple.com>
+
+	* src/lib/rbosa_properties.rb:
+	Added :size as a shortcut to :point_size.
+
+	* src/lib/rbosa.rb:
+	- When converting an Hash object to OSA, property convert Array values ;
+	- Convert type-less Float objects to OSA.
+
 2007-03-27  Laurent Sansonetti  <lsansonetti@apple.com>
 
 	* tc_itunes.rb:
